[gd_scene load_steps=3 format=3 uid="uid://crm28xfdix50f"]

[ext_resource type="Script" uid="uid://xgaxm2h66eie" path="res://Gameplay/game.gd" id="1_tnixw"]

[sub_resource type="Theme" id="Theme_0ajnb"]
MarginContainer/constants/margin_bottom = 16
MarginContainer/constants/margin_left = 16
MarginContainer/constants/margin_right = 16
MarginContainer/constants/margin_top = 16

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0ajnb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Make a choice"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="QuestionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/QuestionContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<question>"
fit_content = true

[node name="Option0Button" type="Button" parent="MarginContainer/VBoxContainer/QuestionContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<Option 1>"
alignment = 0

[node name="Option1Button" type="Button" parent="MarginContainer/VBoxContainer/QuestionContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<Option 2>"
alignment = 0

[node name="OutcomeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OutcomeLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/OutcomeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<Ending>"
fit_content = true
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/OutcomeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Continue"

[node name="AlignmentLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Alignment:"
fit_content = true
horizontal_alignment = 1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_tnixw")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Load"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Save"
